--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,14 @@
     "dependencies": {
         "bootstrap-sass": "twbs/bootstrap-sass#~3.1.1",
         "modernizr": "2.7.1",
-        "jquery": "2.1.1",
+        "jquery": "1.9.1",
         "angular": "1.2.24",
         "json3": "3.3.2",
         "angular-route": "1.2.24",
         "angular-resource": "1.2.24",
         "angular-sanitize": "1.2.24",
-        "bootstrap": "3.2.0"
+        "bootstrap": "3.2.0",
+        "angular-notify": "2.0.2"
     },
     "devDependencies": {
         "angular-mocks": "1.2.24",
