--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
         "angular-resource": "1.2.24",
         "angular-sanitize": "1.2.24",
         "bootstrap": "3.2.0",
-        "angular-notify": "2.0.2"
+        "angular-notify": "2.0.2",
+        "angular-i18n": "*"
     },
     "devDependencies": {
         "angular-mocks": "1.2.24",
