--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "karma-phantomjs-launcher": "0.1.4",
         "karma": "0.12.16",
         "bower": "1.3.5",
-        "lodash": "2.4.1"
+        "lodash": ">=4.17.11"
     },
     "engines": {
         "node": ">=0.10.0"
